--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,33 @@
 /* # utilities*/
 
 .container {
-    max-width: 1080px;
+    max-width: 2000px;
     margin: 0 auto;
+    min-height: 90vh;
+    background-color: aqua;
+}
+
+.d-flex {
+  display: flex;
 }
 
 /* # generals*/
 
 body {
-  padding-top: 30px;
+  padding-top: 50px;
   background: linear-gradient(180deg, #009688 0 15vh,  #D9DBD4 0 80vh);
   height: 100vh;
+}
+
+/* # Main */
+/* sidebar */
+
+#sidebar {
+  flex-basis: 30%;
+  background-color: bisque;
+}
+
+#chat {
+  flex-basis: 70%;
+  background-color: black;
 }
