--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 /* # utilities*/
 
 .container {
-    max-width: 2000px;
+    max-width: 1400px;
     margin: 0 auto;
     min-height: 90vh;
     background-color: aqua;
@@ -27,13 +27,20 @@ body {
 }
 
 /* # Main */
-/* sidebar */
+/* sidebar section */
 
 #sidebar {
   flex-basis: 30%;
   background-color: bisque;
+  border-right: 1px solid #E6E6E6;
 }
 
+.x-side {
+  background-color: #EAEAEA;
+  height: 10vh;
+}
+
+/* chat section */
 #chat {
   flex-basis: 70%;
   background-color: black;
