--- a/css/style.css
+++ b/css/style.css
@@ -31,17 +31,17 @@ body {
 
 #sidebar {
   flex-basis: 30%;
-  background-color: bisque;
+  background-color: #FFFFFF;
   border-right: 1px solid #E6E6E6;
 }
 
 .x-side {
-  background-color: #EAEAEA;
+background-color: #EAEAEA;
   height: 10vh;
 }
 
 /* chat section */
 #chat {
   flex-basis: 70%;
-  background-color: black;
+  background-image: url(../img/mine.png);
 }
