--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@
   display: flex;
 }
 
+.between {
+  justify-content: space-between;
+}
+
 /* # generals*/
 
 body {
@@ -44,4 +48,23 @@ background-color: #EAEAEA;
 #chat {
   flex-basis: 70%;
   background-image: url(../img/mine.png);
+}
+
+/* icons */
+i {
+  color: #B1B1B1;
+  margin-right: 10px;
+}
+
+/* profile pic */
+
+.prof-pic {
+  height: 70px;
+  width: 70px;
+  background-size: cover;
+}
+
+img{
+  height: 100%;
+  border-radius: 50px;
 }
