--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,14 @@
   align-items: center;
 }
 
+.bg-gray {
+  background-color: #EAEAEA;
+}
+
+.bg-azure {
+  background-color: #8EDAFC;
+}
+
 /* # generals*/
 
 body {
@@ -44,7 +52,6 @@ body {
 }
 
 .x-side {
-background-color: #EAEAEA;
 height: 10vh;
 padding: 10px;
 }
@@ -61,6 +68,19 @@ i {
   margin-right: 20px;
 }
 
+.push-icon {
+  height: 50px;
+  width: 50px;
+  border-radius: 50px;
+  background-color: white;
+}
+
+.push-icon > i {
+  position: relative;
+  top: 0;
+  left: 12px;
+}
+
 /* profile pic */
 
 .prof-pic {
@@ -71,4 +91,20 @@ i {
 img{
   height: 100%;
   border-radius: 50px;
+}
+
+/* notification bar */
+
+.push-text {
+  margin-left: 10px;
+}
+
+.push-text > h5 {
+  font-size: 0.9rem;
+  margin-bottom: 2px;
+}
+
+.push-text > p {
+  color: #6D9A9D;
+  text-decoration: underline;
 }
