preparing for message

--- a/css/style.css
+++ b/css/style.css
@@ -152,3 +152,17 @@ img{
   padding: 5px;
   color: #ABABAB;
 }
+
+/* messages */
+
+.message {
+
+}
+
+.sent {
+  background-color: #D5F9BA;
+}
+
+.received {
+  background-color: white;
+}
